# DD-NOTE

./: .gitignore  FicherVerf.csv  FicherVerfEmail.csv  README.md  main.py  pyproject.toml  requirements.txt  test.csv  test.py  utilisateurs.csv
Backend/: __init__.py
Backend/db/: connexion.py  init.py
Backend/exceptions/: Exceptions.py  __init__.py
Backend/models/: Absence.py  Classe.py  CodeOTP.py  Etudiant.py  Filiere.py  Module.py  Note.py  Orientation.py  Prof.py  ProfModule.py  Seance.py  Validation.py  __init__.py  admin.py
Backend/services/: __init__.py  genPassword.py
Backend/utils/: crypto.py  security.py
Custom/: Button.py  ChangeFrame.py  ComboBox.py  DataBase.py  Entry.py  Font.py  Frame.py  Image.py  Label.py  OptionMenu.py  Popup.py  ScrolableFrame.py  Theme_controls.py  Theme_current.json  __init__.py  image.py  secondWindow.py  theme_colors.json
Custom/Position/: Place.py  __init__.py
Frontend/: Change_Password.py  CreatAccount.py  ForgetPassword.py  OTP.py  OTP_Email.py  OTP_Password.py  Siscrire.py  __init__.py  connexion.py  mainFrame.py
test/: test.py  test_graient
